[gd_scene load_steps=2 format=3 uid="uid://b0cf0so7ua55k"]

[ext_resource type="Script" path="res://scenes/ui/pause_menu/options_menu/options_menu.gd" id="1_script"]

[node name="OptionsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "OPCIONES"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MasterVolumeContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/MasterVolumeContainer"]
layout_mode = 2
text = "Volumen Maestro"

[node name="SliderContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/MasterVolumeContainer"]
layout_mode = 2

[node name="MasterVolumeSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/MasterVolumeContainer/SliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.8

[node name="MasterVolumeLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/MasterVolumeContainer/SliderContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "80%"
horizontal_alignment = 2

[node name="MusicVolumeContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/MusicVolumeContainer"]
layout_mode = 2
text = "Volumen MÃºsica"

[node name="SliderContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/MusicVolumeContainer"]
layout_mode = 2

[node name="MusicVolumeSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/MusicVolumeContainer/SliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.7

[node name="MusicVolumeLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/MusicVolumeContainer/SliderContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "70%"
horizontal_alignment = 2

[node name="SFXVolumeContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/SFXVolumeContainer"]
layout_mode = 2
text = "Volumen SFX"

[node name="SliderContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/SFXVolumeContainer"]
layout_mode = 2

[node name="SFXVolumeSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/SFXVolumeContainer/SliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.8

[node name="SFXVolumeLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/SFXVolumeContainer/SliderContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "80%"
horizontal_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FullscreenContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/FullscreenContainer"]
layout_mode = 2
text = "Pantalla Completa"

[node name="FullscreenCheckBox" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/FullscreenContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volver"
